# practical-audit-trail

./: .gitignore  app.py  pyproject.toml  readme.md  requirements.txt
pat/: __init__.py  config.py  hashing.py  keys.py  ledger.py  policy.py  receipt.py  replay.py
tests/: test_hash_chain.py  test_replay.py  test_signatures.py
